# phoenix_onchain_mm

./: .gitignore  Cargo.toml
client/: .env.example  Cargo.toml
client/src/: main.rs  utils.rs
phoenix_mm/: Cargo.toml
phoenix_mm/src/: entrypoint.rs  lib.rs  types.rs  utils.rs
