cargo-features = ["edition2024"]
[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
solana-sdk = "2.1.0"
solana-client = "2.1.0"
solana-rpc-client = "2.1.0"
solana-clock = "2.1.0"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
anyhow = "1.0.99"
litesvm = "0.7.0"
serde = "1.0.219"
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"] }
spl-associated-token-account = "7.0.0"
tokio = "1.47.1"

