cargo-features = ["edition2024"]
[package]
name = "phoenix_mm"
version = "0.1.0"
edition = "2024"
[features]
enable-log = []
[lib]
crate-type = ["lib", "cdylib"]
[dependencies]
pinocchio = "0.9.2"
pinocchio-pubkey = "0.3.0"
bytemuck = { version = "1.16.1", features = ["derive", "min_const_generics"] }
lib-sokoban = "=0.3.0" 
arrayvec = "0.7.6"
#borsh = { version = "=1.5.7", features = ["derive"] }
borsh = "=0.9.3"
pinocchio-system = "0.3.0"
pinocchio-log = "0.5.1"
pinocchio-token = "0.4.0"
